<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cinza_claro"
        tools:context=".MenuDeOpcoes">

    <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="#CDCDCD"
            android:layout_marginTop="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textSize="18sp"
                android:textColor="@color/branco"
                android:fontFamily="@font/futura_xblk_bt"
                android:text="@string/titulo_menu_opcao"
                android:contentDescription="@string/todo"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:paddingBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Button
                android:id="@+id/btn_mega"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:paddingTop="@dimen/espacamentoInternoBotao"
                android:paddingBottom="@dimen/espacamentoInternoBotao"
                android:background="@drawable/button_style_verde"
                android:elevation="6dp"
                android:text="@string/mega_sena"
                android:textSize="@dimen/tamLetraBotao"
                android:fontFamily="@font/futura_xblk_bt"
                android:textColor="@color/branco"
                android:drawableTop="@mipmap/ic_megasena"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="?android:attr/buttonBarButtonStyle" />

        <Button
                android:id="@+id/btn_quina"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:paddingTop="@dimen/espacamentoInternoBotao"
                android:paddingBottom="@dimen/espacamentoInternoBotao"
                android:background="@drawable/button_style_azul"
                android:elevation="6dp"
                android:text="@string/quina"
                android:textSize="@dimen/tamLetraBotao"
                android:fontFamily="@font/futura_xblk_bt"
                android:textColor="@color/branco"
                android:drawableTop="@mipmap/ic_quina"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            android:layout_marginTop="0dp">

        <Button
                android:id="@+id/btn_lotoFacil"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:paddingTop="@dimen/espacamentoInternoBotao"
                android:paddingBottom="@dimen/espacamentoInternoBotao"
                android:background="@drawable/button_style_roxo"
                android:elevation="6dp"
                android:text="@string/loto_facil"
                android:textSize="@dimen/tamLetraBotao"
                android:fontFamily="@font/futura_xblk_bt"
                android:textColor="@color/branco"
                android:drawableTop="@mipmap/ic_lotofacil"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="?android:attr/buttonBarButtonStyle" />

        <Button
                android:id="@+id/btn_lotoMania"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:paddingTop="@dimen/espacamentoInternoBotao"
                android:paddingBottom="@dimen/espacamentoInternoBotao"
                android:background="@drawable/button_style_laranja"
                android:elevation="6dp"
                android:text="@string/loto_mania"
                android:textSize="@dimen/tamLetraBotao"
                android:fontFamily="@font/futura_xblk_bt"
                android:textColor="@color/branco"
                android:drawableTop="@mipmap/ic_lotomania"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>